syntax = "proto3";

package infraboard.mflow.task;
option go_package = "github.com/infraboard/mflow/apps/task";

import "mcube/pb/resource/meta.proto";
import "mflow/apps/job/pb/job.proto";
import "mflow/apps/task/pb/job_task.proto";
import "mflow/apps/pipeline/pb/pipeline.proto";

message PipelineTaskSet {
	// 总数量
	// @gotags: bson:"total" json:"total"
    int64 total = 1;
	// 清单
	// @gotags: bson:"items" json:"items"
    repeated PipelineTask items = 2;
}

message PipelineTask {
    // 元信息
    // @gotags: bson:",inline" json:"meta"
    infraboard.mcube.resource.Meta meta = 1;
    // 运作时参数
    // @gotags: bson:",inline" json:"params"
    pipeline.RunPipelineRequest params = 2;
	// 关联Job, 如果是任务, pipeline后面可能会修改, 因此需要保存运行时的pipeline定义
	// @gotags: bson:"pipeline" json:"pipeline"
	pipeline.Pipeline pipeline = 3;
	// 任务当前状态
	// @gotags: bson:"status" json:"status"
	PipelineTaskStatus status = 4;
}

message PipelineTaskStatus {
	// 任务当前状态
	// @gotags: bson:"stage" json:"stage"
    STAGE stage = 1;
	// 任务开始时间
	// @gotags: bson:"start_at" json:"start_at"
    int64 start_at = 2;
	// 任务结束时间
	// @gotags: bson:"end_at" json:"end_at"
    int64 end_at = 3;
	// 状态描述
	// @gotags: bson:"message" json:"message"
	string message = 4;
	// Pipeline 运行时环境变量, 运行过程中 动态更新
	// @gotags: bson:"runtime_envs" json:"runtime_envs"
	job.RunParamSet runtime_envs = 5;
	// 任务状态详细描述, 用于Debug
	// @gotags: bson:"stage_status" json:"stage_status"
	repeated StageStatus stage_status = 6;
	// 事件回调状态
	// @gotags: bson:"webhooks" json:"webhooks"
	repeated pipeline.WebHook webhooks = 7;
	// Jot Task 关注人通知状态
	// @gotags: bson:"mention_users" json:"mention_users"
	repeated pipeline.MentionUser mention_users = 8;
	// 任务事件
	// @gotags: bson:"events" json:"events"
	repeated pipeline.Event events = 9;
	// 如果有下一个需要运行的Pipeline Task 的id
	// @gotags: bson:"next_pipeline_task_id" json:"next_pipeline_task_id"
	string next_pipeline_task_id = 10;
	// 运行下一个流水线失败
	// @gotags: bson:"run_next_pipeline_error" json:"run_next_pipeline_error"
	string run_next_pipeline_error = 11;
}

message StageStatus {
    // stage名称
	// @gotags: bson:"name" json:"name"
    string name = 1;
	// 任务状态, pipeline task表不存储, 已存储在 job task表中, 通过关联查询获得
	// @gotags: bson:"-" json:"tasks"
	repeated JobTask tasks = 15;
}